# fishsense-postcorrection

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  calibration.ipynb  correction_params.yaml  deployment_info.ipynb  fishfinder_runner.py  fishsense-postcorrection.code-workspace  label-studio_template.xml  rosbag_debug.md  runner.ipynb  runner.py  setup.py
.github/workflows/: pylint.yml
e4e/: align.py  colorcorrection.py  depthCalibration.py  depth_calibration.py  extract.py  fishfinder.py  labelstudio.py  postcorrection.py  timeranges.py  visualAlign.py  visual_align.py
e4e/detection_code/: detect.py  detect_function.py
e4e/detection_code/core/: config.py  functions.py  utils.py
src/: align.cpp
tests/: labelstudio_mock_data.py  test_labelstudio.py  test_rosbagalign.py
